fix core-icon dependency

--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "private": true,
   "dependencies": {
     "core-action-icons": "Polymer/core-action-icons#master",
-    "core-icon": "Polymer/core-iconset-svg#master",
+    "core-icon": "Polymer/core-icon#master",
     "core-iconset-svg": "Polymer/core-iconset-svg#master",
     "polymer": "Polymer/polymer#master"
   }
