--- a/bower.json
+++ b/bower.json
@@ -2,9 +2,9 @@
   "name": "core-icons",
   "private": true,
   "dependencies": {
-    "core-icon": "Polymer/core-icon#master",
-    "core-iconset-svg": "Polymer/core-iconset-svg#master",
-    "polymer": "Polymer/polymer#master"
+    "core-icon": "Polymer/core-icon#0.8-preview",
+    "core-iconset-svg": "Polymer/core-iconset-svg#0.8-preview",
+    "polymer": "Polymer/polymer#0.8-preview"
   },
   "ignore": [
     "util",
