--- a/bower.json
+++ b/bower.json
@@ -2,9 +2,13 @@
   "name": "iron-icons",
   "private": true,
   "dependencies": {
+    "polymer": "polymer/polymer#v0.8.0-rc.4",
     "iron-icon": "polymerelements/iron-icon#^0.8.0",
-    "iron-iconset-svg": "polymerelements/iron-iconset-svg#^0.8.0",
-    "polymer": "polymer/polymer#v0.8.0-rc.4"
+    "iron-iconset-svg": "polymerelements/iron-iconset-svg#^0.8.0"
+  },
+  "devDependencies": {
+    "paper-styles": "polymerelements/paper-styles#^0.8.0",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.6.0"
   },
   "ignore": [
     "util",
