--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,30 @@
 {
   "name": "iron-icons",
+  "version": "0.9.0",
+  "authors": [
+    "The Polymer Authors"
+  ],
+  "keywords": [
+    "web-components",
+    "web-component",
+    "polymer"
+  ],
+  "main": "iron-icons.html",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/PolymerElements/paper-icons"
+  },
+  "license": "MIT",
+  "homepage": "https://github.com/PolymerElements/paper-icons",
   "dependencies": {
-    "polymer": "polymer/polymer#v0.8.0-rc.7",
-    "iron-icon": "polymerelements/iron-icon#^0.8.0",
-    "iron-iconset-svg": "polymerelements/iron-iconset-svg#^0.8.0"
+    "polymer": "polymer/polymer#v0.9.0-rc.1",
+    "iron-icon": "polymerelements/iron-icon#^0.9.0",
+    "iron-iconset-svg": "polymerelements/iron-iconset-svg#^0.9.0"
   },
   "devDependencies": {
-    "paper-styles": "polymerelements/paper-styles#^0.8.0",
+    "paper-styles": "polymerelements/paper-styles#^0.9.0",
+    "iron-meta": "polymerelements/iron-meta#^0.9.0",
     "webcomponentsjs": "webcomponents/webcomponentsjs#^0.6.0"
   },
   "ignore": [
