--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
   "name": "iron-icons",
-  "version": "0.9.0",
+  "version": "0.9.2",
+  "description": "A set of icons for use with iron-icon",
   "authors": [
     "The Polymer Authors"
   ],
@@ -18,14 +19,14 @@
   "license": "MIT",
   "homepage": "https://github.com/PolymerElements/paper-icons",
   "dependencies": {
-    "polymer": "polymer/polymer#v0.9.0-rc.1",
     "iron-icon": "polymerelements/iron-icon#^0.9.0",
-    "iron-iconset-svg": "polymerelements/iron-iconset-svg#^0.9.0"
+    "iron-iconset-svg": "polymerelements/iron-iconset-svg#^0.9.0",
+    "polymer": "Polymer/polymer#^0.9.0"
   },
   "devDependencies": {
     "iron-flex-layout": "polymerelements/iron-flex-layout#^0.9.0",
     "iron-meta": "polymerelements/iron-meta#^0.9.0",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.6.0"
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0"
   },
   "ignore": [
     "util",
