Add variants for 1.x/2.x versions of iron-meta; use only compatible API in tests.

--- a/bower.json
+++ b/bower.json
@@ -30,6 +30,9 @@
     "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0",
     "web-component-tester": "^6.0.0"
   },
+  "resolutions": {
+    "webcomponentsjs": "^1.0.0"
+  },
   "variants": {
     "1.x": {
       "dependencies": {
@@ -47,13 +50,47 @@
       "resolutions": {
         "webcomponentsjs": "^0.7"
       }
+    },
+    "polymer-1.x_iron-meta-2.x": {
+      "dependencies": {
+        "iron-icon": "polymerelements/iron-icon#^1.0.0",
+        "iron-iconset-svg": "polymerelements/iron-iconset-svg#^1.0.0",
+        "polymer": "Polymer/polymer#^1.9"
+      },
+      "devDependencies": {
+        "paper-styles": "polymerelements/paper-styles#^1.0.2",
+        "iron-component-page": "polymerelements/iron-component-page#1.0.0",
+        "iron-meta": "polymerelements/iron-meta#^2.0.0",
+        "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0",
+        "web-component-tester": "^4.0.0"
+      },
+      "resolutions": {
+        "webcomponentsjs": "^0.7",
+        "iron-meta": "^2.0.0"
+      }
+    },
+    "polymer-2.x_iron-meta-1.x": {
+      "dependencies": {
+        "iron-icon": "PolymerElements/iron-icon#1 - 2",
+        "iron-iconset-svg": "PolymerElements/iron-iconset-svg#1 - 2",
+        "polymer": "Polymer/polymer#^2.0.0"
+      },
+      "devDependencies": {
+        "paper-styles": "PolymerElements/paper-styles#1 - 2",
+        "iron-component-page": "polymerelements/iron-component-page#1 - 2",
+        "iron-meta": "PolymerElements/iron-meta#^1.0.0",
+        "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0",
+        "web-component-tester": "^6.0.0"
+      },
+      "resolutions": {
+        "webcomponentsjs": "^1.0.0",
+        "polymer": "^2.0.0",
+        "iron-meta": "^1.0.0"
+      }
     }
   },
   "ignore": [
     "util",
     "update-icons.sh"
-  ],
-  "resolutions": {
-    "webcomponentsjs": "^1.0.0"
-  }
+  ]
 }
