--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ addons:
     packages:
       - google-chrome-stable
 script:
-  - true || xvfb-run polymer test
+  - xvfb-run polymer test
   - >-
-    if [ "${TRAVIS_PULL_REQUEST}" = "false" ]; then true || polymer test -s
+    if [ "${TRAVIS_PULL_REQUEST}" = "false" ]; then polymer test -s
     'default'; fi
 dist: trusty
