--- a/package.json
+++ b/package.json
@@ -1,19 +1,43 @@
 {
-  "name": "@polymer/iron-icons",
-  "private": true,
   "description": "A set of icons for use with iron-icon",
+  "keywords": [
+    "web-components",
+    "polymer",
+    "icon"
+  ],
   "repository": {
     "type": "git",
     "url": "git://github.com/PolymerElements/iron-icons"
   },
+  "homepage": "https://github.com/PolymerElements/paper-icons",
+  "name": "@polymer/iron-icons",
   "license": "BSD-3-Clause",
   "devDependencies": {
     "@polymer/gen-typescript-declarations": "^1.2.2",
     "bower": "^1.8.0",
-    "webmat": "^0.2.0"
+    "webmat": "^0.2.0",
+    "@polymer/paper-styles": "^3.0.0-pre.20",
+    "@polymer/iron-component-page": "^3.0.0-pre.20",
+    "@polymer/iron-meta": "^3.0.0-pre.20",
+    "@webcomponents/webcomponentsjs": "^2.0.0",
+    "wct-browser-legacy": "^1.0.1"
   },
   "scripts": {
     "update-types": "bower install && gen-typescript-declarations --deleteExisting --outDir .",
     "format": "webmat && npm run update-types"
+  },
+  "version": "3.0.0-pre.20",
+  "resolutions": {
+    "inherits": "2.0.3",
+    "samsam": "1.1.3",
+    "supports-color": "3.1.2",
+    "type-detect": "1.0.0",
+    "@webcomponents/webcomponentsjs": "2.0.0-beta.2"
+  },
+  "author": "The Polymer Authors",
+  "dependencies": {
+    "@polymer/iron-icon": "^3.0.0-pre.20",
+    "@polymer/iron-iconset-svg": "^3.0.0-pre.20",
+    "@polymer/polymer": "^3.0.0"
   }
 }
