--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: node_js
 sudo: 'false'
-before_script: npm install -g polymer-cli
+before_script:
+  - npm install -g polymer-cli
+  - git checkout package-lock.json
+  - >-
+    npm run format && git diff --exit-code || (echo -e '\n\033[31mERROR:\033[0m
+    Project is not formatted. Please run "npm run format".' && false)
 env:
   global:
     - secure: fGdLW6E9GO7qVK3rhO1Prsq6GyYgFCVlM4OFnpvCucbd/4pB8d+X5j/zsBZWPggAJY+yfgB+5HD4Fnc4Oe9wPCiiDTFJsVAnDQzeQ/jm7njjyfs0lg9GhJXdCP6128XzFD+UUj9pYZLUxlh5JrPIfKgJ1Y7CO9rINUHBr4s+T6I=
