--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,7 @@
       "convertedUrl": "av-icons.js",
       "exports": {}
     },
+    "index.html": null,
     "demo/index.html": {
       "convertedUrl": "demo/index.html",
       "exports": {}
