--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   "name": "@polymer/iron-icons",
   "license": "BSD-3-Clause",
   "devDependencies": {
-    "webmat": "^0.2.0",
-    "@polymer/paper-styles": "^3.0.0-pre.20",
     "@polymer/iron-meta": "^3.0.0-pre.20",
+    "@polymer/paper-styles": "^3.0.0-pre.20",
     "@webcomponents/webcomponentsjs": "^2.0.0",
-    "wct-browser-legacy": "^1.0.1"
+    "wct-browser-legacy": "^1.0.1",
+    "webmat": "^0.2.2"
   },
   "scripts": {
     "format": "webmat"
