Use latest Node.js version when testing on Travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ env:
   global:
     - secure: fGdLW6E9GO7qVK3rhO1Prsq6GyYgFCVlM4OFnpvCucbd/4pB8d+X5j/zsBZWPggAJY+yfgB+5HD4Fnc4Oe9wPCiiDTFJsVAnDQzeQ/jm7njjyfs0lg9GhJXdCP6128XzFD+UUj9pYZLUxlh5JrPIfKgJ1Y7CO9rINUHBr4s+T6I=
     - secure: NK4K9VxX+fEWXis4c+XbmtBZsPyM351T3hsm7HKb9LMZFsxzDLjI3KKnQq9Ncjk/lRgx++1TqWxSIzDgW6cUjARQ7/Yt/d8ztq1dCYT21vCWH7nt2ZxrCH/4Gso/Kmxjgn9bWUA4lGulb5i3V37s0icEs9t28+2dTmOMJGrhSr4=
-node_js: '9'
+node_js: 'node'
 addons:
   firefox: latest
   chrome: stable
