--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "name": "@polymer/iron-icons",
   "license": "BSD-3-Clause",
   "devDependencies": {
-    "@polymer/iron-meta": "^3.0.0-pre.20",
-    "@polymer/paper-styles": "^3.0.0-pre.20",
+    "@polymer/iron-meta": "^3.0.0-pre.22",
+    "@polymer/paper-styles": "^3.0.0-pre.22",
     "@webcomponents/webcomponentsjs": "^2.0.0",
     "wct-browser-legacy": "^1.0.1",
     "webmat": "^0.2.2",
@@ -22,15 +22,15 @@
   },
   "scripts": {
     "format": "webmat",
-    "generate-types": "gen-typescript-declarations --deleteExisting --outDir .",
+    "generate-types": "gen-typescript-declarations --deleteExisting --outDir . --verify",
     "prepack": "npm run generate-types"
   },
   "version": "3.0.0-pre.22",
   "author": "The Polymer Authors",
   "main": "iron-icons.js",
   "dependencies": {
-    "@polymer/iron-icon": "^3.0.0-pre.20",
-    "@polymer/iron-iconset-svg": "^3.0.0-pre.20",
+    "@polymer/iron-icon": "^3.0.0-pre.22",
+    "@polymer/iron-iconset-svg": "^3.0.0-pre.22",
     "@polymer/polymer": "^3.0.0"
   }
 }
